--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.9.2",
+    "@aws-amplify/ui-react": "^1.2.22",
+    "aws-amplify": "^4.3.4",
     "gatsby": "^4.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
